# Paveiq

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/demo/: heuristic_scorer_v1.json
data/demo/: 12.9300_77.5500_12.9900_77.6500_features_with_wards_scored.parquet
docs/: METHODOLOGY.md
notebooks/: inspect_osm_data.py
src/paveiq/: __init__.py  config.py
src/paveiq/dashboard/: __init__.py  app.py  data.py  insights.py  mapview.py  theme.py  whatif.py
src/paveiq/data_ingestion/: __init__.py  osm_loader.py  ward_boundaries.py
src/paveiq/features/: __init__.py  build_features.py
src/paveiq/models/: __init__.py  heuristic.py  registry.py  train.py
src/paveiq/scoring/: __init__.py  score_city.py
tests/: test_build_features.py  test_dashboard_data.py  test_dashboard_insights.py  test_dashboard_mapview.py  test_dashboard_theme.py  test_dashboard_whatif.py  test_heuristic.py  test_osm_loader.py  test_package.py  test_registry.py  test_score_city.py  test_train.py  test_ward_boundaries.py
