[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paveiq"
version = "0.1.0"
description = "Predictive footpath health scoring for Bengaluru."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
