[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paveiq"
version = "0.1.0"
description = "Predictive footpath health scoring for Bengaluru."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
osm = ["osmnx>=2.0"]
dashboard = ["streamlit>=1.38.0", "pydeck>=0.9.0"]

[dependency-groups]
osm = ["osmnx>=2.0"]
dashboard = ["streamlit>=1.38.0", "pydeck>=0.9.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
